# meridian

./: .codex-container.toml  .codex-mcp.config  .env.example  .gitignore  .mcp.json  HYPERIA.md  README.md  electron-builder.json  eslint.config.js  helm.html  hyperia.app.json  index.html  layers.html  package-lock.json  package.json  radio.html  routing.html  setup.html  vite.config.js
.github/workflows/: build.yml
docs/: 01-vision-and-architecture.md  02-boundaries-and-bathy-stitch.md  03-layered-build-roadmap.md  04-wind-current-layers.md
electron/: bridge.js  main.js  preload.js
enc_charts/ENC_ROOT/: CATALOG.031  README.TXT
lib/: api-service.js  fdmath.js  field.js  fieldlayer.js  flow-field.js  landmask.js  meridian-terminal.jsx  orcdata.js  router.js  telemetry.js  topbar.js  vessel.js
scripts/: build.ps1  convert-s57-to-pmtiles.sh  gen-geo-pins.mjs  gen-icon.mjs  gen-math-corpus.mjs  gen-route-fixture.mjs  make-review-zip.mjs  mock-radio.mjs  run-sim.ps1  run.ps1  sk-ingest-bridge.mjs  test-3dtiles-proxy.mjs
sidecar/: Cargo.toml
sidecar/mcp/: README.md
sidecar/src/: bridge.rs  lib.rs  main.rs  mcp.rs  route_api.rs  upstream.rs
sidecar/src/route/: engine.rs  fdlibm.rs  forecast.rs  geo.rs  jsmath.rs  landmask.rs  mod.rs  polar.rs  types.rs
sidecar/tests/: geo_parity.rs  golden_parity.rs  math_parity.rs
spec/: DRAIN-LOG.md
spec/2026-06-11/: AGENT-INSTRUCTIONS.md  SPEC-CONVENTION.md  marine-data-licensing-catalog.md  meridian-terminal.jsx  spec-acp-and-search-v2.md  spec-acp-and-search.md  spec-anchorage-layer.md  spec-auth.md  spec-build-signalk-sim.md  spec-chart-ingestion.md  spec-chart-style.md  spec-extension-model.md  spec-fleet-network.md  spec-google-3d-tiles.md  spec-hyperia-integration.md  spec-n2k-interop.md  spec-radar.md  spec-radio-embedded.md  spec-radio.md  spec-refactor-guidance.md  spec-route-research-frontend.md  spec-route-research.md  spec-route-sidecar.md  spec-service-layer.md  spec-service-usage.md  spec-signalk.md  spec-userdata.md  spec-wind-current-layers-v2.md  (+2 more)
src/: App.css  App.jsx  index.css
(+35 files in other folders)
